.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v3/globalConsoleInEffect.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/globalConsoleInEffect.ts(6,3): warning TS377065: This Effect code uses `console.log`, logging in Effect code is represented through `Effect.log or Logger`. effect(globalConsoleInEffect)
/.src/globalConsoleInEffect.ts(11,3): warning TS377065: This Effect code uses `console.warn`, logging in Effect code is represented through `Effect.logWarning or Logger`. effect(globalConsoleInEffect)
/.src/globalConsoleInEffect.ts(16,3): warning TS377065: This Effect code uses `console.error`, logging in Effect code is represented through `Effect.logError or Logger`. effect(globalConsoleInEffect)
/.src/globalConsoleInEffect.ts(22,3): warning TS377065: This Effect code uses `console.log`, logging in Effect code is represented through `Effect.log or Logger`. effect(globalConsoleInEffect)
/.src/globalConsoleInEffect.ts(47,3): error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)


==== /.src/globalConsoleInEffect.ts (5 errors) ====
    // @effect-diagnostics globalConsoleInEffect:warning
    import { Console, Effect } from "effect"
    
    // Should trigger - console.log inside Effect.gen
    export const consoleLogInGen = Effect.gen(function*() {
      console.log("hello")
      ~~~~~~~~~~~~~~~~~~~~
!!! warning TS377065: This Effect code uses `console.log`, logging in Effect code is represented through `Effect.log or Logger`. effect(globalConsoleInEffect)
    })
    
    // Should trigger - console.warn inside Effect.fn
    export const consoleWarnInFn = Effect.fn("consoleWarnInFn")(function*() {
      console.warn("warning")
      ~~~~~~~~~~~~~~~~~~~~~~~
!!! warning TS377065: This Effect code uses `console.warn`, logging in Effect code is represented through `Effect.logWarning or Logger`. effect(globalConsoleInEffect)
    })
    
    // Should trigger - console.error inside Effect.gen
    export const consoleErrorInGen = Effect.gen(function*() {
      console.error("error")
      ~~~~~~~~~~~~~~~~~~~~~~
!!! warning TS377065: This Effect code uses `console.error`, logging in Effect code is represented through `Effect.logError or Logger`. effect(globalConsoleInEffect)
    })
    
    // Should trigger - aliased console
    export const aliasedConsole = Effect.gen(function*() {
      const myConsole = console
      myConsole.log("hello")
      ~~~~~~~~~~~~~~~~~~~~~~
!!! warning TS377065: This Effect code uses `console.log`, logging in Effect code is represented through `Effect.log or Logger`. effect(globalConsoleInEffect)
    })
    
    // Should NOT trigger - console.log at module level
    console.log("module level")
    
    // Should NOT trigger - console.log in regular function
    const _regularFn = () => {
      console.log("regular")
    }
    
    // Should NOT trigger - console.log inside nested arrow in generator
    export const nestedArrowInGen = Effect.gen(function*() {
      const fn = () => console.log("nested")
      return fn
    })
    
    // Should NOT trigger - console.table inside generator (no Effect equivalent)
    export const consoleTableInGen = Effect.gen(function*() {
      console.table({ a: 1 })
    })
    
    // Should NOT trigger - console.log shadowed by Effect Console
    export const shadowedConsole = Effect.gen(function*() {
      const console = yield* Console.Console
      console.log("hello")
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)
    })
    
